# Youeye

./: .gitignore  Cargo.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
crates/youeye-app/: Cargo.toml
crates/youeye-app/src/: app.rs  canvas.rs  export.rs  main.rs  menu.rs  menu_linux.rs  menu_native.rs  modifiers.rs  paths.rs  recents.rs  ui.rs
crates/youeye-doc/: Cargo.toml
crates/youeye-doc/src/: lib.rs  node.rs  style.rs  tokens.rs
crates/youeye-io/: Cargo.toml
crates/youeye-io/src/: lib.rs  svg.rs
crates/youeye-render/: Cargo.toml
crates/youeye-render/src/: constraints.rs  layout.rs  lib.rs  scene.rs  text.rs
docs/: README.md  features.md  overview.md  stack.md  status.md
scripts/: gh-issues.sh
