[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Dave Mackintosh <me@dav3.co>"]
rust-version = "1.92"

[workspace.dependencies]
youeye-doc = { path = "crates/youeye-doc" }
youeye-render = { path = "crates/youeye-render" }
youeye-io = { path = "crates/youeye-io" }

anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UI + rendering. Versions are pinned to a known-compatible set;
# egui-wgpu and vello must agree on the wgpu major version.
egui = "0.34"
egui-winit = "0.34"
egui-wgpu = "0.34"
winit = "0.30"
wgpu = "29"
vello = "0.8"
kurbo = "0.11"

# Native menus (Mac / Windows only — muda pulls GTK on Linux, which we avoid).
muda = "0.17"

# Per-OS data/config/cache dirs.
directories = "6"

[profile.dev]
opt-level = 1         # wgpu/vello are dog-slow at opt-level=0
incremental = true

[profile.dev.package."*"]
opt-level = 3         # but keep deps optimized

[profile.release]
lto = "thin"
codegen-units = 1
