[package]
name = "youeye-app"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "youeye"
path = "src/main.rs"

[dependencies]
youeye-doc.workspace = true
youeye-render.workspace = true
youeye-io.workspace = true

egui.workspace = true
egui-winit.workspace = true
egui-wgpu.workspace = true
winit.workspace = true
wgpu.workspace = true
vello.workspace = true
kurbo.workspace = true

directories.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

pollster = "0.4"
rfd = "0.14"
png = "0.17"

# muda is GTK-backed on Linux; we don't want that dep on Linux builds.
# Linux uses the in-window egui menu bar instead.
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
muda.workspace = true
